--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,28 @@ li {
   margin: 0;
   background-color: aqua;
 }
+
+div.relative {
+  position: relative;
+  width: 400px;
+  height: 720px;
+}
+
+div.slot {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 400px;
+  height: 100px;
+  border-top: 3px solid #73AD21;
+  border-bottom: 3px solid #73AD21;
+}
+
+div.slotnow {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 400px;
+
+  border-bottom: 3px solid red;
+}
